--- a/Deber3RecyclerViewInstagram/app/src/main/res/layout/item_feed.xml
+++ b/Deber3RecyclerViewInstagram/app/src/main/res/layout/item_feed.xml
@@ -2,8 +2,19 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content">
+
+    <TextView
+        android:id="@+id/tv_hora"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:backgroundTint="#00FFFFFF"
+        android:textColor="#68000000"
+        app:layout_constraintStart_toStartOf="@+id/tv_nombre"
+        app:layout_constraintTop_toTopOf="@+id/tv_nombre"
+        tools:text="Lindo gatito" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -95,8 +106,8 @@
 
     <ImageButton
         android:id="@+id/btn_like"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
         android:backgroundTint="#00FFFFFF"
@@ -110,8 +121,8 @@
 
     <ImageButton
         android:id="@+id/imageButton7"
-        android:layout_width="40dp"
-        android:layout_height="30dp"
+        android:layout_width="35dp"
+        android:layout_height="25dp"
         android:layout_marginTop="4dp"
         android:backgroundTint="#00FFFFFF"
         android:contentDescription="comentario"
@@ -124,8 +135,8 @@
 
     <ImageButton
         android:id="@+id/imageButton8"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
         android:layout_marginTop="4dp"
         android:backgroundTint="#00FFFFFF"
         android:contentDescription="enviar"
