--- a/Deber3RecyclerViewInstagram/app/src/main/res/layout/activity_main.xml
+++ b/Deber3RecyclerViewInstagram/app/src/main/res/layout/activity_main.xml
@@ -59,7 +59,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_feed"
         android:layout_width="374dp"
-        android:layout_height="480dp"
+        android:layout_height="400dp"
         android:layout_marginBottom="4dp"
         android:backgroundTint="#00FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/imageButton3"
@@ -145,10 +145,11 @@
         android:id="@+id/rv_storie"
         android:layout_width="374dp"
         android:layout_height="108dp"
+        android:layout_marginTop="44dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.486"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
